[workspace]
resolver = "2"
members = ["cl_client", "cl_server"]

[workspace.package]
authors = ["Max Nordlund"]
repository = "https://github.com/nordluma/cl-client-server"
license = "MIT"
edition = "2021"

[workspace.dependencies]
anyhow = "1"
byteorder = "1"
ciborium = "0.2.1"
ciborium-io = "0.2.1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
