[workspace]
resolver = "2"
members = ["cl_client", "cl_server", "cl_lib"]

[workspace.package]
authors = ["Max Nordlund"]
repository = "https://github.com/nordluma/cl-client-server"
license = "MIT"
edition = "2021"

[workspace.dependencies]
anyhow = "1"
byteorder = "1"
ciborium = "0.2.1"
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
