[package]
name = "cl_client"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cl_lib = { path = "../cl_lib" }
clap = { version = "4.4.2", features = ["derive"] }
anyhow = { workspace = true }
byteorder = { workspace = true }
ciborium = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
