[package]
name = "cl_server"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cl_lib = { path = "../cl_lib" }

anyhow = { workspace = true }
byteorder = { workspace = true }
ciborium = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
